@startuml Comodinera
skinparam classAttributeIconSize 0

class Comodinera{
-observadores: List<Observador>
+agregarComodin(Modificador c)
+cambiarOrden(Modificador c1, Modificador c2)
+quitarComodin(Modificador c)
+aplicarComodines(Puntaje p, Juego j)
+cantidadDeComodines(): int
+obtenerComodines(): List<Modificador>
}

interface Observado {
+agregarObservador(Observador o)
+agregarObservadores(List<Observador> os)
+quitarObservador(Observador o)
+quitarObservadores(List<Observador> os)
+notificarObservadores()
}

interface Modificador{
+aplicarModificador(Puntaje puntaje, Juego juego)
}

interface Comprable {
    +comprar()
    +obtenerNombre(): String
    +obtenerRutaBase(): String
}

Modificador .up.|> Comprable

Comodinera ..|> Observado
Comodinera "1" o-- "*" Modificador

@enduml